--- a/package.json
+++ b/package.json
@@ -3,25 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next dev",
+    "lint:check": "eslint ./src",
+    "lint:fix": "eslint ./src --fix",
+    "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "2.1.5",
+    "@react-oauth/google": "^0.12.1",
+    "@sentry/react": "^8.36.0",
+    "@sentry/vite-plugin": "^2.22.6",
+    "@tanstack/react-query": "^5.62.7",
+    "gtomy-lib": "1.2.0",
+    "next": "15.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.1"
+    "react-ga4": "^2.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.1",
-    "@eslint/eslintrc": "^3"
+    "daisyui": "^4.12.22",
+    "eslint-config-prettier": "^9",
+    "eslint-plugin-prettier": "^5",
+    "postcss": "^8",
+    "prettier": "^3",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
