--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "15.1.1",
+    "gtomy-lib": "2.0.0-rc.4",
+    "next": "^15.1.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-ga4": "^2.1.0"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.1",
     "daisyui": "^4.12.22",
+    "eslint": "^9",
+    "eslint-config-next": "^15.1.1",
     "eslint-config-prettier": "^9",
     "eslint-plugin-prettier": "^5",
     "postcss": "^8",
