--- a/package.json
+++ b/package.json
@@ -1,33 +1,43 @@
 {
   "name": "gtomy-net",
-  "version": "0.1.0",
   "private": true,
+  "version": "2.0.0",
+  "type": "module",
   "scripts": {
-    "build": "next build",
-    "dev": "next dev",
-    "lint:check": "eslint ./src",
-    "lint:fix": "eslint ./src --fix",
-    "start": "next start"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint:check": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "gtomy-lib": "2.0.0-rc.5",
-    "next": "^15.1.1",
+    "@tailwindcss/vite": "^4.0.6",
+    "@tanstack/react-router": "^1.102.5",
+    "babel-plugin-react-compiler": "^19.0.0-beta-30d8a17-20250209",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-lazy-load-image-component": "^1.6.3",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "daisyui": "^4.12.22",
-    "eslint": "^9",
-    "eslint-config-next": "^15.1.1",
-    "eslint-config-prettier": "^9",
-    "eslint-plugin-prettier": "^5",
-    "postcss": "^8",
-    "prettier": "^3",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@eslint/js": "^9.19.0",
+    "@tanstack/router-devtools": "^1.102.5",
+    "@tanstack/router-plugin": "^1.102.5",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@types/react-lazy-load-image-component": "^1.6.4",
+    "@vitejs/plugin-react": "^4.3.4",
+    "daisyui": "^5.0.0-beta.7",
+    "eslint": "^9.19.0",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react-compiler": "^19.0.0-beta-30d8a17-20250209",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.18",
+    "globals": "^15.14.0",
+    "prettier": "3.5.0",
+    "typescript": "~5.7.2",
+    "typescript-eslint": "^8.22.0",
+    "vite": "^6.1.0"
   }
 }
