--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-react-compiler": "^19.0.0-beta-30d8a17-20250209",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-ga4": "^2.1.0",
     "react-lazy-load-image-component": "^1.6.3",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.6"
