Set environment variable for GA in deploy workflow
Added `VITE_GA_MEASUREMENT_ID` as an environment variable during the build step to configure Google Analytics. This ensures the correct measurement ID is used in the deployment process.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,8 @@ jobs:
       - uses: oven-sh/setup-bun@v2
       - run: bun install --frozen-lockfile
       - run: bun run build
+        env:
+          VITE_GA_MEASUREMENT_ID: ${{ secrets.VITE_GA_MEASUREMENT_ID }}
       - uses: actions/upload-artifact@v4
         with:
           name: untracked-files
