--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@tanstack/router-plugin": "^1.102.5",
+    "@types/node": "^22.13.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@types/react-lazy-load-image-component": "^1.6.4",
