--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-router": "^1.102.5",
     "babel-plugin-react-compiler": "^19.0.0-beta-30d8a17-20250209",
-    "gtomy-lib": "2.0.0-rc.13",
+    "gtomy-lib": "^2.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-ga4": "^2.1.0",
