Switch deployment workflow from Bun to Node.js (npm)
Replaced Bun with Node.js (npm) for the deployment process, updating lint and build steps in the GitHub Actions workflow. Added `package-lock.json` for package dependency tracking with npm.

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -11,14 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: oven-sh/setup-bun@v2
-      - run: bun install --frozen-lockfile
-      - run: bun run lint:check
+      - uses: actions/setup-node@v4
+      - run: npm install --frozen-lockfile
+      - run: npm run lint:check
   build:
     name: Build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: oven-sh/setup-bun@v2
-      - run: bun install --frozen-lockfile
-      - run: bun run build
+      - uses: actions/setup-node@v4
+      - run: npm install --frozen-lockfile
+      - run: npm run build
