--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "gtomy-net",
-  "private": true,
   "version": "2.0.2",
+  "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "tsc -b && vite build",
+    "dev": "vite",
     "lint:check": "eslint .",
     "lint:fix": "eslint . --fix",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "sort-package-json": "sort-package-json"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
@@ -32,12 +33,14 @@
     "@vitejs/plugin-react": "^4.3.4",
     "daisyui": "^5.0.12",
     "eslint": "^9.19.0",
+    "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react-compiler": "^19.0.0-beta-e993439-20250328",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
     "prettier": "3.5.0",
+    "sort-package-json": "^3.0.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
     "vite": "^6.1.0"
